test/sematest/invalid/basic_arithmetic3.java
class A {
  public static void main(String[] args) {
    int b = 4;
    int a = 4 * 5 + (new A()) * b % 4;
  }
}